--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>post</title>
+    <title>el titulo del post</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí haremos un blog post</h1>
-    <p> Y este es el primer parrafo</p>
+    <div id = "container">
+
+        <div id = "post">
+            <h1>Aquí haremos un blog post</h1>
+            <p> Y este es el primer parrafo</p>
+        </div>
+    </div>
 </body>
 </html>
