--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <div id = "container">
-
+        <div id = "cabecera">
+            cabecera
+        </div>
         <div id = "post">
             <h1>Aquí haremos un blog post</h1>
             <p> Y este es el primer parrafo</p>
