--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,10 @@
 <body>
     <div id = "container">
         <div id = "cabecera">
-            cabecera
+            Hyperblog
+            <span id = "tagline">
+                tu blog de confianza
+            </span>
         </div>
         <div id = "post">
             <h1>Aquí haremos un blog post</h1>
