--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
         <div id = "post">
             <h1>Aquí haremos un blog post</h1>
             <p> Y este es el primer parrafo</p>
+            <p>
+                holi
+            </p>
         </div>
     </div>
 </body>
