modifiqué master con azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,14 +9,14 @@
         <div id = "cabecera">
             Hyperblog
             <span id = "tagline">
-                tu blog de confianza
+                tu blog de maestro
             </span>
         </div>
         <div id = "post">
             <h1>Aquí haremos un blog post</h1>
             <p> Y este es el primer parrafo</p>
             <p>
-                holi
+                holi, me caes bien
             </p>
         </div>
     </div>
