--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>bienvenido al hyperblog</title>
+    <title>bienvenido al hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
