cambios en rama fix-typo

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <h1>Aquí haremos un blog post</h1>
             <p> Y este es el primer parrafo</p>
             <p>
-                holi, me caes bien
+                holi, me caes bien. soy bonito y querido
             </p>
         </div>
     </div>
